--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "deep-freeze": "0.0.1",
     "lodash": "^4.17.4",
     "react": "^15.4.2",
+    "react-d3-basic": "^1.6.11",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.3",
     "react-router": "^3.0.2",
+    "recharts": "^0.21.2",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0"
   },
